# cloud

./: .gitignore  LICENSE  Makefile  pyproject.toml  terraform.tf
.github/workflows/: deploy.yml
terraform_modules/common/: s3.tf  ses.tf  terraform_config.tf  variables.tf
